src/test/resources/tests/typeError/changeType.qg

init {
    val = 1
    val = true
}

run true

input(a,b) true
